[package]
name = "mempool-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.17"
simple_logger = "4.1.0"

serde = { version = "1", features = [ "derive" ] }
config = "0.13.3"

dashmap = "5.4.0"
crossbeam-skiplist = "0.1.1"

url = { version = "2.3.1", features = ["serde"] }
anyhow = "1.0"
ctrlc = "3.2.5"
rayon = "1.6.1"
hex = "0.4.3"

bitcoincore-rpc = "0.17.0"
# bitcoincore-rpc = {path="../rust-bitcoincore-rpc/client"}
bitcoincore-zmq= {path = "../bitcoincore-zmq", features=["check_node"] }
