[package]
name = "mempool-server"
authors = ["dev7ba <dev7ba@protonmail.com>"]
description = "Connect to a bitcoin node to serve its mempool via http GET"
version = "0.2.0"
edition = "2021"
keywords = ["bitcoin", "mempool"]
categories = ["command-line-utilities","cryptography::cryptocurrencies"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.17"
simple_logger = "4.2.0"

serde = { version = "1", features = [ "derive" ] }
config = "0.13.3"

dashmap = "5.4.0"
crossbeam-skiplist = "0.1.1"

url = { version = "2.3.1", features = ["serde"] }
dirs = "5.0.1"
anyhow = "1.0"
rayon = "1.6.1"
hex = "0.4.3"

bitcoincore-rpc = "0.17.0"
bitcoincore-zmqsequence= {path = "../bitcoincore-zmqsequence", features=["check_node"] }
# bitcoincore-zmqsequence= {version = "0.2", features=["check_node"] }
rocket = "=0.5.0-rc.3"
nix = "0.26.2"

[profile.release]
strip=true # Strip symbols in binary.
opt-level="s" # Optimize for small size.
lto = true # Optimize but more linking time.
codegen-units = 1 # Maximize size reduction operations.
